force-app/main/default/objects/Trust_Accounting__c/Trust_Accounting__c.object-meta.xml
<CustomObject>
    <label>Trust Accounting</label>
    <nameField>
        <label>Trust Accounting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trust Accountings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>