force-app/main/default/objects/Trust_Accounting__c/fields/AA_Filing_Fee__c.field-meta.xml
<CustomField>
    <fullName>AA_Filing_Fee__c</fullName>
    <inlineHelpText>The amount paid to the court for filing the accounting.</inlineHelpText>
    <label>AA Filing Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>