force-app/main/default/objects/Trust_Accounting__c/fields/AA_Prep_Fee__c.field-meta.xml
<CustomField>
    <fullName>AA_Prep_Fee__c</fullName>
    <inlineHelpText>This is the fee paid to The Arc of Texas for preparing the Annual Accounting.  $150 for standard.</inlineHelpText>
    <label>AA Prep Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>