force-app/main/default/objects/Trust_Accounting__c/fields/Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Date__c</fullName>
    <inlineHelpText>Date Accepted by the Court</inlineHelpText>
    <label>Accepted Date</label>
    <type>Date</type>
</CustomField>