force-app/main/default/objects/Trust_Accounting__c/fields/Active_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Active_Accounting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Accounting</label>
    <type>Checkbox</type>
</CustomField>