force-app/main/default/objects/Trust_Accounting__c/fields/Annual_Accounting_File__c.field-meta.xml
<CustomField>
    <fullName>Annual_Accounting_File__c</fullName>
    <label>Annual Accounting File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>