force-app/main/default/objects/Trust_Accounting__c/fields/Annual_Accounting_Required__c.field-meta.xml
<CustomField>
    <fullName>Annual_Accounting_Required__c</fullName>
    <formula>Trust__r.Annual_Accounting_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Accounting Required</label>
    <type>Checkbox</type>
</CustomField>