force-app/main/default/objects/Trust_Accounting__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trusting Accountings</relationshipLabel>
    <relationshipName>Trusting_Accountings</relationshipName>
    <type>Lookup</type>
</CustomField>