force-app/main/default/objects/Trust_Accounting__c/fields/Cause_Number__c.field-meta.xml
<CustomField>
    <fullName>Cause_Number__c</fullName>
    <formula>Trust__r.Cause_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cause Number</label>
    <type>Text</type>
</CustomField>