force-app/main/default/objects/Trust_Accounting__c/fields/Court_County__c.field-meta.xml
<CustomField>
    <fullName>Court_County__c</fullName>
    <formula>TEXT( Trust__r.Court_County__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this needs to be changed, change it on the Trust record</inlineHelpText>
    <label>Court County</label>
    <type>Text</type>
</CustomField>