force-app/main/default/objects/Trust_Accounting__c/fields/Date_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_Fee_Paid__c</fullName>
    <label>Date Fee Paid</label>
    <type>Date</type>
</CustomField>