force-app/main/default/objects/Trust_Accounting__c/fields/Date_Fees_Charged__c.field-meta.xml
<CustomField>
    <fullName>Date_Fees_Charged__c</fullName>
    <label>Date Fees Charged</label>
    <type>Date</type>
</CustomField>