force-app/main/default/objects/Trust_Accounting__c/fields/Date_Range_End__c.field-meta.xml
<CustomField>
    <fullName>Date_Range_End__c</fullName>
    <label>Date Range End</label>
    <type>Date</type>
</CustomField>