force-app/main/default/objects/Trust_Accounting__c/fields/Date_Range_Start__c.field-meta.xml
<CustomField>
    <fullName>Date_Range_Start__c</fullName>
    <label>Date Range Start</label>
    <type>Date</type>
</CustomField>