force-app/main/default/objects/Trust_Accounting__c/fields/Filing_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Filing_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filing Not Required</label>
    <type>Checkbox</type>
</CustomField>