force-app/main/default/objects/Trust_Accounting__c/fields/Final_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Final_Accounting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Accounting</label>
    <type>Checkbox</type>
</CustomField>