force-app/main/default/objects/Trust_Accounting__c/fields/Last_Submission_Date_Annual_Med_Rpt__c.field-meta.xml
<CustomField>
    <fullName>Last_Submission_Date_Annual_Med_Rpt__c</fullName>
    <label>Last Submission Date - Annual Med Rpt</label>
    <type>Date</type>
</CustomField>