force-app/main/default/objects/Trust_Accounting__c/fields/Managing_Court__c.field-meta.xml
<CustomField>
    <fullName>Managing_Court__c</fullName>
    <formula>Trust__r.Managing_Court__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this needs to be changed, change it on the Trust record</inlineHelpText>
    <label>Managing Court</label>
    <type>Text</type>
</CustomField>