force-app/main/default/objects/Trust_Accounting__c/fields/Medicaid_Report_Required__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Report_Required__c</fullName>
    <label>Medicaid Report Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>