force-app/main/default/objects/Trust_Accounting__c/fields/Month_of_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Anniversary_Date__c</fullName>
    <formula>Case(Month( Anniversary_Date__c )
,1,&quot;January&quot;
,2,&quot;February&quot;
,3, &quot;March&quot;
,4,&quot;April&quot;
,5,&quot;May&quot;
,6,&quot;June&quot;
,7,&quot;July&quot;
,8,&quot;August&quot;
,9,&quot;September&quot;
,10,&quot;October&quot;
,11,&quot;Nivember&quot;
,12,&quot;December&quot;
,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month of Anniversary Date</label>
    <type>Text</type>
</CustomField>