force-app/main/default/objects/Trust_Accounting__c/fields/State_for_Medicaid_Trust_Accounting__c.field-meta.xml
<CustomField>
    <fullName>State_for_Medicaid_Trust_Accounting__c</fullName>
    <label>State for Medicaid Trust Accounting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States_Abreviations</valueSetName>
    </valueSet>
</CustomField>