force-app/main/default/objects/Trust_Accounting__c/fields/Trigger_Task__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Task</label>
    <type>Checkbox</type>
</CustomField>