force-app/main/default/objects/Trust_Accounting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Completed_Date__c</columns>
    <columns>Date_Range_Start__c</columns>
    <columns>Date_Range_End__c</columns>
    <columns>Trust__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>