force-app/main/default/objects/Trust_Accounting__c/listViews/Filed_Date_Blank.listView-meta.xml
<ListView>
    <fullName>Filed_Date_Blank</fullName>
    <columns>NAME</columns>
    <columns>Completed_Date__c</columns>
    <columns>Date_Range_Start__c</columns>
    <columns>Date_Range_End__c</columns>
    <columns>Trust__c</columns>
    <columns>Filing_Not_Required__c</columns>
    <columns>Trigger_Task__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Completed_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Filing_Not_Required__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Filed Date Blank</label>
</ListView>