force-app/main/default/objects/Trust_Accounting__c/listViews/Haley_s_Copy.listView-meta.xml
<ListView>
    <fullName>Haley_s_Copy</fullName>
    <columns>NAME</columns>
    <columns>Completed_Date__c</columns>
    <columns>Date_Range_Start__c</columns>
    <columns>Date_Range_End__c</columns>
    <columns>Trust__c</columns>
    <filterScope>Everything</filterScope>
    <label>Haley&apos;s Copy</label>
</ListView>